# cpp_webview2

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  app.manifest  main.cpp  resource.h  resource.rc  vcpkg.json
cocos_pet/: package.json
cocos_pet/assets/: main.scene
cocos_pet/assets/scripts/: main.ts
cocos_pet/assets/scripts/util/: fromAxisAngle.ts
script/: init_icon.ps1
src/: AppLication.cpp  Bridge.cpp  HKWebview.cpp  MysqlManager.cpp  Net.cpp  Taskbar.cpp  Test.cpp  Window.cpp
src/head/: AppLication.h  Bridge.h  CoreNet.h  HKWebview.h  MysqlManager.h  Net.h  Taskbar.h  Window.h
src/utils/: Encoding.h  JsonUtil.h
